add example tailwind style to task button

--- a/app/client/main.css
+++ b/app/client/main.css
@@ -1,6 +1,5 @@
 @import "tailwindcss";
 
-body {
-  padding: 10px;
-  font-family: sans-serif;
+.button-example-style {
+  @apply px-3 py-1 bg-blue-200 text-white rounded-md
 }
