--- a/ui-modules/home-example/styles.css
+++ b/ui-modules/home-example/styles.css
@@ -11,3 +11,7 @@
 .button-example-style {
   @apply px-3 py-1 bg-blue-200 text-white rounded-md
 }
+
+.textbox-example-style {
+  @apply shadow block
+}
